@@ -88,7 +88,9 @@
 <roundcube:label name="select" />:&nbsp;
 <roundcube:button command="select-all" label="all" classAct="active" />&nbsp;
 <roundcube:button command="select-all" prop="unread" label="unread" classAct="active" />&nbsp;
+<roundcube:button command="select-all" prop="invert" label="invert" classAct="active" />&nbsp;
 <roundcube:button command="select-none" label="none" classAct="active" /> &nbsp;
+<roundcube:container name="listcontrols" id="listcontrols" />
 </span>
 <roundcube:if condition="env:quota" />
 <span id="quotabox">
