@@ -1,6 +1,7 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Added possibility to invert messages selection
 - After move/delete from 'show' action display next message instead of messages list (#1485887)
 - Fixed problem with double quote at the end of folder name (#1485884)
 - Speedup UI by using CSS sprites and etags/expires/deflate in Apache config (#1484858,#1485800)
